--- a/frereAPP/templates/dashboard.html
+++ b/frereAPP/templates/dashboard.html
@@ -27,12 +27,13 @@
                     {%csrf_token%}
                     <label for="search" id="label-search">Search:</label>
                     <input type="text" name="search" id="searchBar" placeholder="Enter Item">
-                    <label  for="language" id="label-language">Language<span style="font-weight: bold;">(USED)</span>:</label>
+                    <label  for="language" id="label-language">Language:</label>
                     <select 
                         name="language" id="language-bar">
-                        <option value="english">English</option>
+                        <option value="english">English - Default</option>
                         <option value="french">Françaises</option>
                         <option value="spanish">Español</option>
+                        <!-- <option value="nepali">नेपाली</option> -->
                     </select>
                     <label for="dept" id="label-dept">Section:</label>
                     <select name="dept" id="kitchenArea">
