--- a/frereAPP/templates/result_spanish.html
+++ b/frereAPP/templates/result_spanish.html
@@ -28,25 +28,24 @@
     <div class="wrapper">
         <div class="box">
             <div class="header">
-                <h2>Find New Item</h2>
+                <h2>Buscar de nuevo:</h2>
                 <form action="/result" method="POST">
                     {%csrf_token%}
-                    <label for="search" id="label-search">Search:</label>
+                    <label for="search" id="label-search">Buscar:</label>
                     <input type="text" name="search" id="searchBar" placeholder="Enter Item">
-                    <label for="language" id="label-language">Language</label>
+                    <label for="language" id="label-language">Lenguaje</label>
                     <select 
                         name="language" id="language-bar">
-                        <option value="english"></option>
-                        <option value="french">Françaises</option>
-                        <option value="spanish">Español</option>
+                        <option value="spanish">Español - Automatico</option>
                         <option value="english">English</option>
+                        <option value="french">Françaises</option>
                     </select>
                     <label for="dept" id="label-dept">Section:</label>
                     <select name="dept" id="kitchenArea">
-                        <option value="all">All Sections</option>
-                        <option value="dmo">DMO</option>
-                        <option value="boh">Back of House</option>
-                        <option value="foh">Front of House</option>
+                        <option value="all">Todas las secciones</option>
+                        <option value="dmo">DMO (Lavador de Platos)</option>
+                        <option value="boh">Back of House (Los de Atras)</option>
+                        <option value="foh">Front of House (Los de Enfrente)</option>
                     </select>
                     <button type="submit" id="submit-btn">Enter</button>
                 </form>
