--- a/frereAPP/static/css/dashboard.css
+++ b/frereAPP/static/css/dashboard.css
@@ -5,8 +5,90 @@
 body {
     background-color: rgb(160, 222, 135);
 }
+
 /* Small phones line iPhone 5 SE */
 @media screen and (max-width:374px) {
+
+h1 {
+    font-size: 2.5em;
+    position: absolute;
+    top: 20px;
+    left: 10px;
+}   
+    label[for="toggle"] {
+    position: fixed;
+    top: 25px;
+    left: 25px;
+    color: black;
+    z-index: 10;
+    font-size: 3rem;
+}
+
+.navigation--responsive {
+    display: none;
+}
+
+#toggle {
+    display: none;
+}
+
+svg.hamburger {
+    display: none;
+}
+.main-navigation {
+    display: none;
+}
+
+svg.hamburger {
+    display: block;
+    position: fixed;
+    left: 75%;
+}
+
+.navigation--responsive {
+    display: block;
+    background-color: rgb(188, 208, 11);  
+    backdrop-filter: blur(20px);
+    width: 20rem;
+    height: 90vh;
+    position: fixed;
+    top: -100vh;
+    right: 0;
+    left: 55%;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+    transition: top 1s;
+    z-index: 6;
+}
+
+.navigation--responsive ul {
+    display: block;
+    list-style: none;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    margin: 85px 0 0 0;
+    padding: 0;
+}
+
+.navigation--responsive ul li {
+    margin: 0;
+    padding: 0;
+}
+
+.navigation--responsive li a {
+    padding: 50px 20px 50px 30px;
+    text-decoration:none;
+    color:black;
+    font-family:Arial, Helvetica, sans-serif;
+}  
+
+#toggle:checked ~ .navigation--responsive {
+    top: 0vh;
+} 
     .wrapper{
         display: flex;
         justify-content: center;
@@ -20,6 +102,7 @@ body {
         position: relative;
         top: 100px;
         height: 30vh;
+        left: 5%;
     }
     .header{
         position: relative;
@@ -59,52 +142,108 @@ h2 {
     left: 10%;
 }
 #label-dept{
-    position: relative;
-    top: 25px;
+    position: absolute;
+    top: 90px;
     left: 10%;
     font-size: 1.15rem;
 }
 #kitchenArea{
     position: relative;
     top: 22.5px;
-    left: 15%;
+    left: 35%;
 }
 
 #submit-btn{
-    position: relative;
-    right: 15%;
+    position: absolute;
+    top: 125px;
     width: 11vh;
-    font-size: large;
-    top: 50px;
+    font-size: 1rem;
+    right:10%;
 }
-.contact{
-    position: relative;
-    top: 40px;
-    font-size: 1.5rem;
-    left: 5%;
-}
-#contact-btn{
-    background-color: blue;
-    width: 15vh;
-    height: 4vh;
-    border-radius: 10%;
-}
-.exit{
-    position: relative;
-    top: 15px;
-    font-size: 1.5rem;
-    left: 75%;
-}
-#exit-btn{
-    width: 10vh;
-    background-color: red;
-    border-radius: 10%;
-    font-size: large;
-    height: 4vh;
-}
+
 }
 /* Regular phones like Iphone X + */
 @media only screen and (min-width:375px) {
+    h1 {
+        font-size: 2.5em;
+        position: absolute;
+        top: 20px;
+        left: 10px;
+    }   
+        label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 75%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 20rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 55%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    } 
     .wrapper{
         display: flex;
         justify-content: center;
@@ -117,6 +256,7 @@ h2 {
         justify-content: center;
         position: relative;
         top: 200px;
+        left: 5%;
         height: 30vh;
     }
     .header{
@@ -157,51 +297,108 @@ h2 {
     height: 3.5vh;
 }
 #label-dept{
-    position: relative;
-    top: 25px;
+    position: absolute;
+    top: 110px;
     left: 10%;
     font-size: 1.5rem;
 }
 #kitchenArea{
     position: relative;
-    top: 22.5px;
-    left: 15%;
+    top: 27.5px;
+    left: 35%;
 }
 
 #submit-btn{
-    position: relative;
-    right: 20%;
+    position: absolute;
     width: 10vh;
     font-size: large;
-    top: 70px;
-}
-.contact{
-    position: relative;
-    top: 70px;
-    font-size: 1.75rem;
-    left: 5%;
-}
-#contact-btn{
-    background-color: blue;
-    width: 12vh;
-    height: 4vh;
-    border-radius: 10%;
-}
-.exit{
-    position: relative;
-    top: 35px;
-    font-size: 1.75rem;
+    top: 170px;
     left: 70%;
 }
-#exit-btn{
-    width: 10vh;
-    background-color: red;
-    border-radius: 10%;
-    height: 4vh;
-}
+
 }
 /* iphone 12max */
 @media only screen and (min-width:420px){
+    h1 {
+        font-size: 2.5em;
+        position: absolute;
+        top: 20px;
+        left: 10px;
+    }   
+        label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 75%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 20rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 55%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    } 
     .wrapper{
         display: flex;
         justify-content: center;
@@ -266,43 +463,321 @@ h2 {
 
 #submit-btn{
     position: absolute;
-    left: 35%;
+    left: 65%;
     width: 12vh;
     font-size: large;
     top: 160px;
 }
-.contact{
-    position: relative;
-    top: 100px;
-    font-size: 1.75rem;
-    left: 5%;
-}
-#contact-btn{
-    background-color: blue;
-    width: 12vh;
-    height: 4vh;
-    border-radius: 10%;
-}
-.exit{
-    position: relative;
-    top: 60px;
-    font-size: 1.75rem;
-    left: 70%;
-}
-#exit-btn{
-    width: 10vh;
-    background-color: red;
-    border-radius: 10%;
-    height: 4vh;
-}
+
 }
 /* landscape mobile devices */
 @media only screen and (min-width:480px){
+    h1 {
+        font-size: 2.5em;
+        position: absolute;
+        top: 20px;
+        left: 10px;
+    }   
+        label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 75%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 20rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 55%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    } 
+    .wrapper{
+        display: flex;
+        justify-content: center;
+    }
+    .box{
+        background-color: rgb(25, 112, 93);
+        border-radius: 5%;
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: 200px;
+        height: 30vh;
+    }
+    .header{
+        position: relative;
+        top: 5px
+    }
+h2 {
+    position: relative;
+    left: 10%;
+    top: 10px;
+    font-size: 2.25;
+}
+#label-search{
+    position: relative;
+    left: 10%;
+    top: 12.5px;
+    font-size: 1.5rem;
+    font-family: 'Times New Roman', Times, serif;
+}
+#searchBar{
+    position: relative;
+    top: 10px;
+    height: 3vh;
+    text-align: center;
+    left: 10%;
+    font-size: 2vh;
+}
+#label-language{
+    position: relative;
+    top: 20px;
+    left: 10%;
+    font-size: 1.5rem;
+}
+#language-bar{
+    position: relative;
+    top: 15px;
+    left: 10%;
+    height: 3.5vh;
+}
+#label-dept{
+    position: absolute;
+    top: 120px;
+    font-size: 1.5rem;
+}
+#kitchenArea{
+    position: absolute;
+    top: 125px;
+    left: 35%;
+}
+
+#submit-btn{
+    position: absolute;
+    left: 65%;
+    width: 12vh;
+    font-size: large;
+    top: 160px;
+}
 
 }
 
 /* tablet portrait */
 @media only screen and (min-width:768px){
+    h1 {
+        font-size: 4.5em;
+        position: absolute;
+        top: 20px;
+        left: 10%;
+    }   
+        label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 85%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 15rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 75%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        font-size: 1.5rem;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    } 
+    .wrapper{
+        display: flex;
+        justify-content: center;
+    }
+    .box{
+        background-color: rgb(25, 112, 93);
+        border-radius: 5%;
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: 200px;
+        height: 30vh;
+    }
+    .header{
+        position: relative;
+        top: 5px
+    }
+h2 {
+    position: relative;
+    left: -10%;
+    top: 10px;
+    font-size: 3.25rem;
+}
+#label-search{
+    position: relative;
+    left: 10%;
+    top: 22.5px;
+    font-size: 1.5rem;
+    font-family: 'Times New Roman', Times, serif;
+}
+#searchBar{
+    position: relative;
+    top: 20px;
+    height: 3vh;
+    text-align: center;
+    left: 10%;
+    font-size: 2vh;
+}
+#label-language{
+    position: absolute;
+    top: 125px;
+    left: 10%;
+    font-size: 1.5rem;
+
+}
+#language-bar{
+    position: absolute;
+    top: 125px;
+    left: 180px;
+
+}
+#label-dept{
+    position: absolute;
+    top: 190px;
+    
+}
+#kitchenArea{
+    position: absolute;
+    top: 185px;
+    height: 3vh;
+}
+
+#submit-btn{
+    position: absolute;
+    left: 65%;
+    width: 12vh;
+    font-size: large;
+    top: 250px;
+}
+
 }
 
 /* tablet landscape */ 
