--- a/frereAPP/static/css/index.css
+++ b/frereAPP/static/css/index.css
@@ -9,6 +9,13 @@ body {
 }
 /* Small phones line iPhone 5 SE */
 @media screen and (max-width:374px) {
+    .errors {
+        color:  red;
+        font-size: 1.5rem;
+        position: relative;
+        left: 25%;
+        top: 20px;
+    }
     .wrapper{
         display: flex;
         justify-content: center;
