--- a/frereAPP/static/css/result.css
+++ b/frereAPP/static/css/result.css
@@ -4,6 +4,80 @@
 }
 /* Small phones line iPhone 5 SE */
 @media screen and (max-width:374px) {
+    label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 75%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 20rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 55%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    }
     .wrapper{
         display: flex;
         justify-content: center;
@@ -107,6 +181,80 @@ h2 {
 }
 /* Regular phones like Iphone X + */
 @media only screen and (min-width:375px) {
+    label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 75%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 20rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 55%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    } 
     .wrapper{
         display: flex;
         justify-content: center;
@@ -211,6 +359,80 @@ h2 {
 
 /* iphone 12max */
 @media only screen and (min-width:420px){
+    label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 75%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 20rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 55%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    } 
     .wrapper{
         display: flex;
         justify-content: center;
@@ -319,6 +541,80 @@ h2 {
 
 /* landscape mobile devices */
 @media only screen and (min-width:480px){
+    label[for="toggle"] {
+        position: fixed;
+        top: 25px;
+        left: 25px;
+        color: black;
+        z-index: 10;
+        font-size: 3rem;
+    }
+    
+    .navigation--responsive {
+        display: none;
+    }
+    
+    #toggle {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: none;
+    }
+    .main-navigation {
+        display: none;
+    }
+    
+    svg.hamburger {
+        display: block;
+        position: fixed;
+        left: 75%;
+    }
+    
+    .navigation--responsive {
+        display: block;
+        background-color: rgb(188, 208, 11);  
+        backdrop-filter: blur(20px);
+        width: 20rem;
+        height: 90vh;
+        position: fixed;
+        top: -100vh;
+        right: 0;
+        left: 55%;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        transition: top 1s;
+        z-index: 6;
+    }
+    
+    .navigation--responsive ul {
+        display: block;
+        list-style: none;
+        height: 70vh;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-around;
+        margin: 85px 0 0 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive ul li {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .navigation--responsive li a {
+        padding: 50px 20px 50px 30px;
+        text-decoration:none;
+        color:black;
+        font-family:Arial, Helvetica, sans-serif;
+    }  
+    
+    #toggle:checked ~ .navigation--responsive {
+        top: 0vh;
+    } 
 }
 
 /* tablet portrait */
