--- a/frereAPP/templates/contact.html
+++ b/frereAPP/templates/contact.html
@@ -36,7 +36,7 @@
                             <a href="#" onclick="featureNotAvailable()">Union Board</a>
                         </li>
                         <li>
-                            <a href="/safety" onclick="featureNotAvailable()">Safety</a>
+                            <a href="/safety">Safety</a>
                         </li>
                         <li>
                             <a href="#" onclick="featureNotAvailable()">Weekly Menu</a>
