--- a/frereAPP/templates/safety.html
+++ b/frereAPP/templates/safety.html
@@ -26,7 +26,7 @@
                 <nav class="navigation--responsive">
                     <ul>
                         <li>
-                            <a href="/safety">Translation Tool</a>
+                            <a href="/dashboard">Translation Tool</a>
                         </li>
                         <li>
                             <a href="/contact">Contact</a>
