--- a/frereAPP/templates/index.html
+++ b/frereAPP/templates/index.html
@@ -29,7 +29,7 @@
             </div>
             <form action="/team" method="POST">
                 {% csrf_token %}
-                <input type="text" name="teamName" id="teamName" placeholder="Enter Team Name">
+                <input type="text" name="teamName" id="teamName" placeholder="Enter Cafe Name">
                 <button type="submit">Enter</button>
             </form>
         </div>
