--- a/frereAPP/static/css/dashboard.css
+++ b/frereAPP/static/css/dashboard.css
@@ -6,94 +6,177 @@ body {
     background-color: rgb(160, 222, 135);
 }
 
+/* Source for menu: https://codepen.io/erikterwan/pen/EVzeRP  */
+
 /* Small phones line iPhone 5 SE */
 @media screen and (max-width:374px) {
+
+/* This is the Menu Portion */
+#menuToggle {
+    display: block;
+    position: relative;
+    top: 50px;
+    
+    z-index: +6;
+    
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+#menuToggle a{
+    text-decoration: none;
+    color: #232323;
+    width: 13rem;
+    transition: color 0.3s ease;
+}
+
+#menuToggle a:hover{
+    color: tomato;
+}
+
+
+#menuToggle input{
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: 87.5%;
+    
+    cursor: pointer;
+    
+    opacity: 0; /* hide this */
+    z-index: 2; /* and place it over the hamburger */
+    
+    -webkit-touch-callout: none;
+}
+#menuToggle input:checked {
+    height: 500px;
+    width: 100%;
+    position: absolute;
+    top: -7px;
+    left: 22%;
+    z-index: -4;
+}
+
+/* Just a quick hamburger */
+#menuToggle span{
+    display: block;
+    width: 10%;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    left: 87.5%;
+    background: #080000;
+    border-radius: 3px;
+    
+    z-index: 1;
+    
+    transform-origin: 4px 0px;
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+}
+
+#menuToggle span:first-child{
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2){
+    transform-origin: 0% 100%;
+}
+
+/* 
+
+* Transform all the slices of hamburger
+* into a crossmark.
+
+*/
+#menuToggle input:checked ~ span{
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+}
+
+/*
+
+* But let's hide the middle one.
+
+*/
+#menuToggle input:checked ~ span:nth-last-child(3){
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+
+* Ohyeah and the last one should go the other direction
+
+*/
+#menuToggle input:checked ~ span:nth-last-child(2){
+    transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+
+* Make this absolute positioned
+* at the top left of the screen
+
+*/
+#menu{
+    position: absolute;
+    width: 85%;
+    height: 650px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 50px;
+    left: -15px;
+    background: #ededed;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li{
+    padding: 10px 0;
+    font-size: 22px;
+    position: relative;
+    left: 10px;
+}
+.these-links{
+    background-color: red;
+    z-index: 10;
+}
+/* 
+
+*And let's slide it in from the left
+
+*/
+#menuToggle input:checked ~ ul{
+    transform: none;
+}
+
+
+/* Page Layout */
+
 
 h1 {
     font-size: 2.5em;
     position: absolute;
     top: 20px;
     left: 10px;
-}   
-    label[for="toggle"] {
-    position: fixed;
-    top: 25px;
-    left: 25px;
-    color: black;
-    z-index: 10;
-    font-size: 3rem;
 }
-
-.navigation--responsive {
-    display: none;
-}
-
-#toggle {
-    display: none;
-}
-
-svg.hamburger {
-    display: none;
-}
-.main-navigation {
-    display: none;
-}
-
-svg.hamburger {
-    display: block;
-    position: fixed;
-    left: 75%;
-}
-
-.navigation--responsive {
-    display: block;
-    background-color: rgb(188, 208, 11);  
-    backdrop-filter: blur(20px);
-    width: 20rem;
-    height: 90vh;
-    position: fixed;
-    top: -100vh;
-    right: 0;
-    left: 55%;
-    bottom: 0;
-    margin: 0;
-    padding: 0;
-    transition: top 1s;
-    z-index: 6;
-}
-
-.navigation--responsive ul {
-    display: block;
-    list-style: none;
-    height: 70vh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-    margin: 85px 0 0 0;
-    padding: 0;
-}
-
-.navigation--responsive ul li {
-    margin: 0;
-    padding: 0;
-}
-
-.navigation--responsive li a {
-    padding: 50px 20px 50px 30px;
-    text-decoration:none;
-    color:black;
-    font-family:Arial, Helvetica, sans-serif;
-}  
-
-#toggle:checked ~ .navigation--responsive {
-    top: 0vh;
-} 
-    .wrapper{
+.wrapper{
         display: flex;
         justify-content: center;
     }
-    .box{
+.box{
         background-color: rgb(25, 112, 93);
         border-radius: 5%;
         width: 90%;
@@ -104,7 +187,7 @@ svg.hamburger {
         height: 30vh;
         left: 5%;
     }
-    .header{
+.header{
         position: relative;
         top: 5px
     }
@@ -782,13 +865,566 @@ h2 {
 
 /* tablet landscape */ 
 @media only screen and (min-width:1024px){
+    h1 {
+        font-size: 4.5em;
+        position: absolute;
+        top: 20px;
+        left: 30%;
+    }   
+    #menuToggle
+    {
+      display: block;
+      position: relative;
+      top: 50px;
+      left: 50px;
+      
+      z-index: 1;
+      
+      -webkit-user-select: none;
+      user-select: none;
+    }
+    
+    #menuToggle a
+    {
+      text-decoration: none;
+      color: #232323;
+      
+      transition: color 0.3s ease;
+    }
+    
+    #menuToggle a:hover
+    {
+      color: tomato;
+    }
+    
+    
+    #menuToggle input
+    {
+      display: block;
+      width: 40px;
+      height: 32px;
+      position: absolute;
+      top: -7px;
+      left: -5px;
+      
+      cursor: pointer;
+      
+      opacity: 0; /* hide this */
+      z-index: 2; /* and place it over the hamburger */
+      
+      -webkit-touch-callout: none;
+    }
+    
+    /*
+     * Just a quick hamburger
+     */
+    #menuToggle span
+    {
+      display: block;
+      width: 33px;
+      height: 4px;
+      margin-bottom: 5px;
+      position: relative;
+      
+      background: #cdcdcd;
+      border-radius: 3px;
+      
+      z-index: 1;
+      
+      transform-origin: 4px 0px;
+      
+      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                  background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                  opacity 0.55s ease;
+    }
+    
+    #menuToggle span:first-child
+    {
+      transform-origin: 0% 0%;
+    }
+    
+    #menuToggle span:nth-last-child(2)
+    {
+      transform-origin: 0% 100%;
+    }
+    
+    /* 
+     * Transform all the slices of hamburger
+     * into a crossmark.
+     */
+    #menuToggle input:checked ~ span
+    {
+      opacity: 1;
+      transform: rotate(45deg) translate(-2px, -1px);
+      background: #232323;
+    }
+    
+    /*
+     * But let's hide the middle one.
+     */
+    #menuToggle input:checked ~ span:nth-last-child(3)
+    {
+      opacity: 0;
+      transform: rotate(0deg) scale(0.2, 0.2);
+    }
+    
+    /*
+     * Ohyeah and the last one should go the other direction
+     */
+    #menuToggle input:checked ~ span:nth-last-child(2)
+    {
+      transform: rotate(-45deg) translate(0, -1px);
+    }
+    
+    /*
+     * Make this absolute positioned
+     * at the top left of the screen
+     */
+    #menu
+    {
+      position: absolute;
+      width: 300px;
+      margin: -100px 0 0 -50px;
+      padding: 50px;
+      padding-top: 125px;
+      
+      background: #ededed;
+      list-style-type: none;
+      -webkit-font-smoothing: antialiased;
+      /* to stop flickering of text in safari */
+      
+      transform-origin: 0% 0%;
+      transform: translate(-100%, 0);
+      
+      transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    }
+    
+    #menu li
+    {
+      padding: 10px 0;
+      font-size: 22px;
+    }
+    
+    /*
+     * And let's slide it in from the left
+     */
+    #menuToggle input:checked ~ ul
+    {
+      transform: none;
+    }
+    .wrapper{
+        display: flex;
+        justify-content: center;
+    }
+    .box{
+        background-color: rgb(25, 112, 93);
+        border-radius: 5%;
+        width: 30%;
+        display: flex;
+        justify-content: center;
+        position: relative;
+        top: 200px;
+        height: 30vh;
+        left: 30%;
+    }
+    .header{
+        position: relative;
+        top: 5px
+    }
+h2 {
+    position: relative;
+    left: -30%;
+    top: 10px;
+    font-size: 1.5rem;
+}
+#label-search{
+    position: relative;
+    left: -10%;
+    top: 40px;
+    font-size: 1.25rem;
+    font-family: 'Times New Roman', Times, serif;
+    position: absolute;
+}
+#searchBar{
+    position: relative;
+    top: 42.5px;
+    height: 2.75vh;
+    text-align: center;
+    left: 30%;
+    font-size: 2.5vh;
+    position: absolute;
+}
+#label-language{
+    position: absolute;
+    top: 125px;
+    left: 10%;
+    font-size: 1.5rem;
+
+}
+#language-bar{
+    position: absolute;
+    top: 125px;
+    left: 180px;
+
+}
+#label-dept{
+    position: absolute;
+    top: 190px;
+    
+}
+#kitchenArea{
+    position: absolute;
+    top: 185px;
+    height: 3vh;
+}
+
+#submit-btn{
+    position: absolute;
+    left: 65%;
+    width: 12vh;
+    font-size: large;
+    top: 250px;
+}
 }
 
 /*Small Monitor Screen */
-@media only screen and (min-width:1280px){}
+@media only screen and (min-width:1280px){
+    #menuToggle
+{
+  display: block;
+  position: relative;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+}
 /* med Monitor Screen */
-@media only screen and (min-width:1440px){}
+@media only screen and (min-width:1440px){
+    #menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+}
 
 
 /* Large Monitor */
-@media only screen and (min-width:1920px){}
+@media only screen and (min-width:1920px){
+    #menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  width: 300px;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+    
+}
