--- a/frereAPP/templates/contact.html
+++ b/frereAPP/templates/contact.html
@@ -62,10 +62,24 @@
             </thead>
             <tbody>
                 <tr class="pure-table-odd pure-table pure-table-horizontal">
+                    <th>carlos</th>
+                    <th>test</th>
+                    <th> <button><a style="text-decoration:none;color:black;padding-bottom:3.5px"href="sms:12066139348">TEXT</a></button> </th>
+                </tr>
+                <tr class="pure-table pure-table pure-table-horizontal">
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr class="pure-table-odd pure-table pure-table-horizontal">
                     <td>Morgan Clements</td>
                     <td>Chef de Cuisine</td>
                     <td>(206) 914-6322</td>
-                    <td><a href="tel:12069146322">Call</a> <a href="sms:12069146322">Text</a> <a href="#" onclick="missingEmail()">Email</a></td>
+                    <td>
+                        <button><a  style="text-decoration:none;color:black;padding-bottom:10px" href="tel:12069146322">CALL</a></button> 
+                        <button><a style="text-decoration:none;color:black;padding-bottom:3.5px" href="sms:12069146322">TEXT</a></button> 
+                        <button><a style="text-decoration:none;color:black;padding-bottom:10ppx" href="#" onclick="missingEmail()">EMAIL</a></button>
+                    </td>
                 </tr>
                 <tr class="pure-table pure-table-horizontal">
                     <td>Beth Matthiessen</td>
